Fix Mutiple Choice alignment

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   min-height: 100%;
+  box-sizing: border-box;
 }
 
 html,
@@ -55,53 +56,48 @@ div.answer p.answer_q {
   font-size: 18px;
 }
 
-div.answer p.q_q {
+.answer .q_q {
   font-size: 22px;
   padding-bottom: 10px;
 }
 
 
-div.answer div.all_answers {
+.answer .all_answers {
   border: 2px solid silver;
   border-radius: 5px;
-  padding-top: 10px;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding: 10px;
+  margin-bottom: 20px;
 }
 
-div.answer div.all_answers p.op {
- padding-top: 5px;
- padding-bottom: 5px;
- border: 1px solid silver;
+.all_answers .op {
+  padding: 8px 10px 6px 10px;
+  border: 1px solid lightgrey;
+  margin-bottom: 8px;
+  border-radius: 3px;
 }
 
-div.answer div.all_answers span.question_no {
-  display: inline-block;
-  margin-right: 10px;
-  margin-left: 5px;
+.op .question_no {
   border: 2px dotted silver;
-  padding: 15px;
-}
-
-div.answer div.all_answers span.a_content {
   display: inline-block;
-  max-width: 150px;
-  height: auto;
-  padding-top: 5px;
+  vertical-align: middle;
+  padding: 10px;
 }
 
-div.answer div.all_answers span.a_content span {
-  width: inherit;
+.op p:nth-child(2) {
+  vertical-align: middle;
+  display: inline-block;
+  max-width: 70%;
+  margin-left: 8px;
+  padding: 10px;
 }
 
-div.answer div.all_answers p:hover {
+.op:hover {
   background-color: LightSkyBlue;
   color: white;
-  cursor: pointer;
 }
 
-div.answer div.all_answers p:hover span.question_no {
-  border: 2px dotted white;
+.op:hover .question_no {
+  border-color: white;
 }
 
 /* footer */
